--- a/k2p/.config
+++ b/k2p/.config
@@ -1,9 +1,12 @@
 # 设置固件大小:
-CONFIG_TARGET_ramips=y
-CONFIG_TARGET_ramips_mt7621=y
-CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
-CONFIG_PACKAGE_kmod-mt7615-firmware=n
-CONFIG_PACKAGE_kmod-mt7615e=n
+#CONFIG_TARGET_ramips=y
+#CONFIG_TARGET_ramips_mt7621=y
+#CONFIG_TARGET_ramips_mt7621_DEVICE_phicomm_k2p=y
+#CONFIG_PACKAGE_kmod-mt7615-firmware=n
+#CONFIG_PACKAGE_kmod-mt7615e=n
+CONFIG_TARGET_ar71xx=y
+CONFIG_TARGET_ar71xx_nand=y
+CONFIG_TARGET_ar71xx_nand_DEVICE_wndr4300v1=y
 CONFIG_GRUB_TIMEOUT="0"
 CONFIG_SIGNATURE_CHECK=n
 CONFIG_TARGET_ROOTFS_EXT4FS=n
